가위바위보 게임 최종본

--- a/c_study_github.vcxproj
+++ b/c_study_github.vcxproj
@@ -18,6 +18,9 @@
       <Platform>x64</Platform>
     </ProjectConfiguration>
   </ItemGroup>
+  <ItemGroup>
+    <ClCompile Include="rework_game.c" />
+  </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>15.0</VCProjectVersion>
     <ProjectGuid>{001D6C57-79D6-4DD8-90A9-DD3208D0A9CB}</ProjectGuid>
